--- a/example.cfg
+++ b/example.cfg
@@ -1,6 +1,16 @@
-CAfile: "certs/ca.cert"
-ClientCert: "certs/client.cert"
-ClientKey: "certs/client.key"
-URL: "mqtt"
-Port: 8883
+CACert: "certs/ca.crt"
+ClientCert: "certs/client_goratt_test.crt"
+ClientKey: "certs/client_goratt_test.key"
+ClientID: "goratt-test"
+MqttHost: "mqtt"
+MqttPort: 8883
 
+ApiCAFile: "certs/auth-ca.crt"
+ApiURL: "https://auth.makeitlabs.com/authit/"
+ApiUsername: "goratt_test"
+ApiPassword: "PASWORD"
+Resource: "frontdoor"
+
+TagFile: "validtags.txt"
+
+NFCdevice: "/dev/tty"
