--- a/example.cfg
+++ b/example.cfg
@@ -6,7 +6,7 @@ MqttHost: "mqtt"
 MqttPort: 8883
 
 ApiCAFile: "certs/auth-ca.crt"
-ApiURL: "https://auth.makeitlabs.com/authit/"
+ApiURL: "https://auth/authit/"
 ApiUsername: "goratt_test"
 ApiPassword: "PASWORD"
 Resource: "frontdoor"
