--- a/example.cfg
+++ b/example.cfg
@@ -4,6 +4,7 @@ ClientKey: "certs/client_goratt_test.key"
 ClientID: "goratt-test"
 MqttHost: "mqtt"
 MqttPort: 8883
+CalendarURL: "https://auth.makeitlabs.com/cgi/gencal.py?cal=darkroom"
 
 ApiCAFile: "certs/auth-ca.crt"
 ApiURL: "https://auth/authit/"
