--- a/example.cfg
+++ b/example.cfg
@@ -1,16 +1,57 @@
-CACert: "certs/ca.crt"
-ClientCert: "certs/client_goratt_test.crt"
-ClientKey: "certs/client_goratt_test.key"
-ClientID: "goratt-test"
-MqttHost: "mqtt"
-MqttPort: 8883
+# GoRATT Configuration File (New Format)
 
-ApiCAFile: "certs/auth-ca.crt"
-ApiURL: "https://auth/authit/"
-ApiUsername: "goratt_test"
-ApiPassword: "PASWORD"
-Resource: "frontdoor"
+# Unique client identifier (usually MAC address without separators)
+client_id: "AABBCCDDEEFF"
 
-TagFile: "validtags.txt"
+# Resource name for ACL permissions
+resource: "doorlock"
 
-NFCdevice: "/dev/tty"
+# Local tag file for offline operation
+tag_file: "/home/pi/tags.txt"
+
+# Door open duration in seconds
+wait_secs: 5
+
+# Remote open settings (optional - leave empty to disable)
+open_secret: ""
+open_tool_name: ""
+
+# MQTT broker settings
+mqtt:
+  host: "mqtt.example.com"
+  port: 8883
+  ca_cert: "/path/to/ca.crt"
+  client_cert: "/path/to/client.crt"
+  client_key: "/path/to/client.key"
+
+# API backend settings
+api:
+  url: "https://api.example.com"
+  ca_file: "/path/to/api-ca.crt"
+  username: "apiuser"
+  password: "apipassword"
+
+# Tag reader configuration
+# type: "wiegand", "keyboard", "serial"
+reader:
+  type: "wiegand"
+  device: "/dev/serial0"
+  baud: 9600
+
+# Door opener configuration
+# type: "servo", "gpio_high", "gpio_low", "none"
+door:
+  type: "servo"
+  pin: 18
+  servo_open: 1500
+  servo_close: 1000
+
+# Status indicator configuration
+indicator:
+  # GPIO LED pins (comment out if not used)
+  green_pin: 24
+  yellow_pin: 25
+  red_pin: 23
+  
+  # Neopixel pipe (comment out if not used)
+  # neopixel_pipe: "/home/pi/ledpipe"
