Extract MQTT to separate package, make optional, support non-TLS
- Created mqtt/ package with Client wrapper
- MQTT is now optional: leave host empty to disable
- TLS is optional: omit certs for plain TCP connection
- Updated README and example.cfg with new options

--- a/example.cfg
+++ b/example.cfg
@@ -1,4 +1,4 @@
-# GoRATT Configuration File (New Format)
+# GoRATT Configuration File
 
 # Unique client identifier (usually MAC address without separators)
 client_id: "AABBCCDDEEFF"
@@ -16,13 +16,23 @@ wait_secs: 5
 open_secret: ""
 open_tool_name: ""
 
-# MQTT broker settings
+# MQTT broker settings (optional - leave host empty to disable MQTT)
+# TLS is optional - omit ca_cert/client_cert/client_key for non-TLS connection
 mqtt:
-  host: "mqtt.example.com"
-  port: 8883
-  ca_cert: "/path/to/ca.crt"
-  client_cert: "/path/to/client.crt"
-  client_key: "/path/to/client.key"
+  host: "mqtt.example.com"  # Leave empty to disable MQTT entirely
+  port: 8883                # Default: 1883 (non-TLS) or 8883 (TLS)
+  ca_cert: "/path/to/ca.crt"           # Optional: enables TLS
+  client_cert: "/path/to/client.crt"   # Optional: client certificate
+  client_key: "/path/to/client.key"    # Optional: client key
+
+# Example: MQTT without TLS
+# mqtt:
+#   host: "mqtt.example.com"
+#   port: 1883
+
+# Example: MQTT disabled (standalone mode)
+# mqtt:
+#   host: ""
 
 # API backend settings
 api:
