Add VSCode debug config, make run target, and fix MQTT disabled state
- Added VSCode launch config and task for "make run"
- New Makefile target: "make run" builds arm64_screen and deploys to neopi
- Removed committed binary files from repository
- Fixed MQTT disabled mode to call onConnect callback so indicator shows Idle instead of ConnectionLost

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,12 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "command": "make run ; exit",
+      "name": "Copy to neopi",
+      "request": "launch",
+      "type": "node-terminal"
+    },
+    {
       "name": "Debug GoRATT",
       "type": "go",
       "request": "launch",
