Initial state-based screens

--- a/example.cfg
+++ b/example.cfg
@@ -12,6 +12,8 @@ tag_file: "/home/pi/tags.txt"
 # Door open duration in seconds
 wait_secs: 5
 
+video_enabled: true
+
 # Remote open settings (optional - leave empty to disable)
 open_secret: ""
 open_tool_name: ""
